Martix -> Rotation matrix update

--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\EulerAngles.PNG" />
     <Content Include="Images\RodriguezRotationFormula.PNG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
