--- a/3DVisualization/3DVisualization.csproj
+++ b/3DVisualization/3DVisualization.csproj
@@ -86,8 +86,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converters\ActuatorLengthToColor.cs" />
+    <Compile Include="Converters\Vector3DExtend.cs" />
     <Compile Include="Converters\Vector3DToPoint3D.cs" />
     <Compile Include="Converters\WorkPlatformJointTransformation.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -133,6 +136,11 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Tools\Tools.csproj">
+      <Project>{13cd43d6-e68a-4a0a-ab2a-19a358783fe3}</Project>
+      <Name>Tools</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
